--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@react-native-async-storage/async-storage": "1.16.1",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.8",
-    "@react-navigation/stack": "6.1.1",
+    "@react-navigation/native-stack": "6.5.0",
     "expo": "44.0.6",
     "expo-constants": "13.0.2",
     "expo-image-picker": "12.0.2",
     "expo-status-bar": "1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "github:expo/react-native#sdk-44.0.0",
     "react-native-gesture-handler": "2.2.0",
     "react-native-reanimated": "2.4.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.12.0",
     "react-native-web": "0.17.6"
   },
