Exclude autolinking of react-native-animated
Ref: https://github.com/expo/expo/issues/16704#issuecomment-1076222754

--- a/app.json
+++ b/app.json
@@ -13,9 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.karlhorky.hotlineblingcodealong"
@@ -34,5 +32,8 @@
       "backgroundColor": "#000000",
       "barStyle": "light-content"
     }
+  },
+  "autolinking": {
+    "exclude": ["react-native-reanimated"]
   }
 }
