--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -26,8 +26,8 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Build app with EAS
-        run: eas build --platform=android --non-interactive
+      # - name: Build app with EAS
+      #   run: eas build --platform=android --profile emulator --non-interactive
 
       - name: Use specific Java version for sdkmanager to work
         uses: joschi/setup-jdk@v2
