--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
-    "detox": "^19.6.2"
+    "detox": "^19.6.2",
+    "jest": "27.5.1"
   },
   "private": true
 }
