--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Use specific Java version for sdkmanager to work
         uses: joschi/setup-jdk@v2
         with:
-          java-version: '8'
+          java-version: 'openjdk8'
           architecture: 'x64'
 
       - name: Download Android Emulator Image
