Add Detox config plugin

--- a/app.json
+++ b/app.json
@@ -33,6 +33,7 @@
       "barStyle": "light-content"
     }
   },
+  "plugins": ["@config-plugins/detox"],
   "autolinking": {
     "exclude": ["react-native-reanimated"]
   }
