--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@config-plugins/detox": "^1.2.3",
     "@react-native-async-storage/async-storage": "1.17.3",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.10",
