--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -58,3 +58,5 @@ jobs:
 
       - name: Android Detox
         run: yarn detox test --configuration android
+
+      - run: /Users/runner/Library/Android/sdk/platform-tools/adb -s emulator-5554 shell pm install -r -g -t /data/local/tmp/detox/Application.apk
