Add assembleDebug gradleCommand

--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,8 @@
     },
     "emulator": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": "assembleDebug"
       }
     },
     "simulator": {
