--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -68,6 +68,6 @@ jobs:
         run: |
           open -a Simulator.app
           sleep 10
-          xcrun simctl install booted ./e2e/bin/hotlineblingcodealong.app
+          xcrun simctl install booted /Users/runner/work/hotline-bling-codealong/hotline-bling-codealong/e2e/bin/hotlineblingcodealong.app
           sleep 15
           yarn detox test --configuration ios
