--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -64,15 +64,15 @@ jobs:
           brew tap wix/brew
           brew install applesimutils
 
-      - name: Open iOS Simulator
-        run: |
-          open -a Simulator.app
-          sleep 10
+      # - name: Open iOS Simulator
+      #   run: |
+      #     open -a Simulator.app
+      #     sleep 10
 
-      - name: Run app in Simulator
-        run: |
-          xcrun simctl install booted ./e2e/bin/hotlineblingcodealong.app
-          sleep 15
+      # - name: Run app in Simulator
+      #   run: |
+      #     xcrun simctl install booted ./e2e/bin/hotlineblingcodealong.app
+      #     sleep 15
 
       - name: Run tests
         run: yarn detox test --configuration ios
