Remove more unnecessary steps

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -21,15 +21,15 @@ jobs:
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
-      - name: Install sharp for faster image generation in EAS https://github.com/expo/expo-cli/issues/2676
-        run: yarn global add sharp-cli
+      # - name: Install sharp for faster image generation in EAS https://github.com/expo/expo-cli/issues/2676
+      #   run: yarn global add sharp-cli
 
-      - name: Setup Expo and EAS
-        uses: expo/expo-github-action@v7
-        with:
-          expo-version: latest
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+      # - name: Setup Expo and EAS
+      #   uses: expo/expo-github-action@v7
+      #   with:
+      #     expo-version: latest
+      #     eas-version: latest
+      #     token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Build iOS app locally with EAS
         run: yarn detox build --configuration ios
