--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@config-plugins/detox": "^1.2.3",
+    "@expo/xcpretty": "^4.1.1",
     "@react-native-async-storage/async-storage": "1.17.3",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.10",
