--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -31,7 +31,7 @@ jobs:
       #     eas-version: latest
       #     token: ${{ secrets.EXPO_TOKEN }}
 
-      - run: expo prebuild --platform ios
+      - run: yarn expo prebuild --platform ios
 
       - name: Build iOS app locally with EAS
         run: yarn detox build --configuration ios
