--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -1,10 +1,5 @@
 name: Detox Integration Tests - Android
-
-on:
-  pull_request:
-    branches:
-      - main
-
+on: [push]
 jobs:
   build:
     runs-on: macos-latest
