--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -9,8 +9,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
