--- a/eas.json
+++ b/eas.json
@@ -12,8 +12,7 @@
     },
     "emulator": {
       "android": {
-        "buildType": "apk",
-        "gradleCommand": "assembleDebug"
+        "buildType": "apk"
       }
     },
     "simulator": {
