Add Detox integration tests for iOS (#21)
* Add Detox integration tests for Android

* Build using EAS

* Add package name

* Exclude autolinking of react-native-animated

Ref: https://github.com/expo/expo/issues/16704#issuecomment-1076222754

* Build and run locally

* Add cache to npm install

* Switch to Ubuntu, remove timeout

* Reduce abstraction

* Remove yarn start

* Switch back to macOS

* Add jest

* Change path based on Detox output

* Move yarn install further up

* Install sharp-cli for faster image generation

* Update path according to Detox error

* Revert paths

* Switch to JavaScript config

* Add Jest JavaScript config

* Configure testBinaryPath

* Switch to openjdk8

* Change binaryPath to avoid warning

Warning:

17:03:01.319 detox[6188] WARN:  DetoxRuntimeError: Test APK at path /Users/runner/work/hotline-bling-codealong/hotline-bling-codealong/e2e/bin/app-test.apk was detected as the *app* APK!
HINT: Your test test-binary path was probably wrongly set in the active Detox configuration.
For further assistance, visit the Android setup guide: https://github.com/wix/Detox/blob/master/docs/Introduction.Android.md

* Switch app binary path to test path

* Add Detox config plugin

* Add debugging

* Add boolean OR

* Run detox test after install

* Add assembleDebug gradleCommand

* Switch from testing Android to iOS

* Fix path

* Use absolute path

* Add debugging

* Use relative path

* Remove debuggin, split up steps

* Disable running app in Simulator

* Change bundleIdentifier

To avoid the error:

field CFBundleIdentifier not found inside Info.plist of app binary

Ref: https://github.com/wix/Detox/issues/1108

* Add back step to run in Simulator

* Switch to build-detox.sh script

Ref: https://github.com/calitb/expo-e2e-demo/blob/main/scripts/build-detox-ios.sh
Ref: https://github.com/expo/config-plugins/blob/main/apps/app/scripts/build-detox-ios.sh

* 

--- a/app.json
+++ b/app.json
@@ -15,13 +15,15 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.karlhorky.hotlineblingcodealong"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.karlhorky.hotlineblingcodealong"
     },
     "web": {
       "favicon": "./assets/icon.png"
@@ -30,5 +32,6 @@
       "backgroundColor": "#000000",
       "barStyle": "light-content"
     }
-  }
+  },
+  "plugins": ["@config-plugins/detox"]
 }
