--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "hotline-bling-codealong",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@config-plugins/detox": "1.2.3",
+    "@expo/xcpretty": "4.1.1",
     "@react-native-async-storage/async-storage": "1.17.3",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.10",
@@ -15,10 +19,11 @@
     "expo": "44.0.6",
     "expo-constants": "13.0.2",
     "expo-image-picker": "12.0.2",
+    "expo-splash-screen": "0.14.1",
     "expo-status-bar": "1.2.0",
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-dom": "17.0.2",
-    "react-native": "github:expo/react-native#sdk-44.0.0",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "2.3.2",
     "react-native-reanimated": "2.6.0",
     "react-native-safe-area-context": "4.2.4",
@@ -26,7 +31,8 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "7.17.9"
-  },
-  "private": true
+    "@babel/core": "7.17.9",
+    "detox": "19.6.2",
+    "jest": "27.5.1"
+  }
 }
