--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -32,10 +32,13 @@ jobs:
         run: expo prebuild --platform android
 
       - name: Install Java JDK
-        uses: actions/setup-java@v3
+        uses: joschi/setup-jdk@v1
         with:
-          distribution: 'temurin'
-          java-version: '8'
+          java-version: 'openjdk8'
+          architecture: 'x64'
+        env:
+          # https://github.com/actions/toolkit/issues/641#issuecomment-728963957
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
       - name: Build Android app locally with gradlew
         run: yarn detox build --configuration android
