Add artifact upload on failure

--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -41,3 +41,10 @@ jobs:
 
       - name: Run tests
         run: yarn detox test --configuration ios
+
+      # Store any Detox screenshots on test failure
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: detox-artifacts
+          path: .detoxArtifacts
