Downgrade to API 29 to fix not responding errors
Use API 29 to avoid "System UI isn't responding" ANR (Application Not
Responding) error

https://github.com/ReactiveCircus/android-emulator-runner/issues/129

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -58,11 +58,14 @@ jobs:
       - name: Run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 30
+          # Use API 29 to avoid "System UI isn't responding" ANR (Application Not Responding) error
+          # https://github.com/upleveled/hotline-bling-codealong/pull/26#issuecomment-1094659722
+          # https://github.com/ReactiveCircus/android-emulator-runner/issues/129
+          api-level: 29
           target: default
           arch: x86_64
           profile: pixel
-          avd-name: Pixel_3a_API_30
+          avd-name: Pixel_3a_API_29
           script: yarn detox test --configuration android
 
       # Store any Detox screenshots on test failure
