--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -65,6 +65,12 @@ jobs:
           avd-name: Pixel_3a_API_30
           script: cd android && ./gradlew connectedCheck
 
+      # Sleep for 10 seconds to avoid "System UI isn't responding" ANR (Application Not Responding) error
+      # https://github.com/ReactiveCircus/android-emulator-runner/issues/129
+      # https://github.com/upleveled/hotline-bling-codealong/pull/26#issuecomment-1094659722
+      - name: Avoid System UI isn't responding error
+        run: sleep 10
+
       # Is it flaky? test 3
       - name: Run Detox integration tests
         run: yarn detox test --configuration android
