--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -64,15 +64,14 @@ jobs:
           profile: pixel
           avd-name: Pixel_3a_API_30
 
-      # Sleep for 10 seconds to avoid "System UI isn't responding" ANR (Application Not Responding) error
-      # https://github.com/ReactiveCircus/android-emulator-runner/issues/129
-      # https://github.com/upleveled/hotline-bling-codealong/pull/26#issuecomment-1094659722
-      - name: Avoid System UI isn't responding error
-        run: sleep 10
-
       # Is it flaky? test 2
       - name: Run Detox integration tests
-        run: yarn detox test --configuration android
+        # Sleep for 10 seconds and retry tests to
+        # work around "System UI isn't responding" ANR
+        # (Application Not Responding) error
+        # https://github.com/ReactiveCircus/android-emulator-runner/issues/129
+        # https://github.com/upleveled/hotline-bling-codealong/pull/26#issuecomment-1094659722
+        run: yarn detox test --configuration android || (sleep 10 && yarn detox test --configuration android)
 
       # Store any Detox screenshots on test failure
       - uses: actions/upload-artifact@v3
