Switch back to inline script

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -55,17 +55,7 @@ jobs:
       - name: Build Android app locally with gradlew
         run: yarn detox build --configuration android
 
-      - name: Cache AVD snapshot
-        uses: actions/cache@v3
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-30
-
-      - name: Create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
+      - name: Start emulator
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
@@ -73,10 +63,7 @@ jobs:
           arch: x86_64
           profile: pixel
           avd-name: Pixel_3a_API_30
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD snapshot for caching"
+          script: yarn detox test --configuration android || (sleep 10 && yarn detox test --configuration android)
 
       # Is it flaky? test 3
       - name: Run Detox integration tests
