--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -112,8 +112,8 @@ jobs:
       - name: Run Detox integration tests
         run: yarn detox test --configuration android
 
-      # Store any Detox screenshots on test failure
-      - uses: actions/upload-artifact@v3
+      - name: Store Detox artifacts on test failure
+        uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: detox-artifacts
