--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -95,8 +95,8 @@ jobs:
 
       - name: Download Android Emulator Image
         run: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-29;google_apis;x86"
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name emu --device "Nexus 5X" -k 'system-images;android-29;google_apis;x86'
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;google_apis;x86"
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name emu --device Pixel_3a_API_30 -k 'system-images;android-30;google_apis;x86'
           $ANDROID_HOME/emulator/emulator -list-avds
 
       - name: Android Emulator
