--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -95,11 +95,11 @@ jobs:
 
       - name: Download Android Emulator Image
         run: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;google_apis;x86"
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30 --device "Pixel 3a" -k 'system-images;android-30;google_apis;x86'
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;google_apis;x86_64"
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30 --device "Pixel 3a" -k 'system-images;android-30;google_apis;x86_64'
           $ANDROID_HOME/emulator/emulator -list-avds
 
-      - name: Android Emulator
+      - name: Start Android Emulator
         timeout-minutes: 10
         continue-on-error: true
         run: |
