--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -97,7 +97,7 @@ jobs:
         run: |
           echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;default;x86_64"
           $ANDROID_HOME/tools/bin/sdkmanager --list_installed
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30 --device pixel_3a -k 'system-images;android-30;default;x86_64'
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30_AOSP --device pixel_3a -k 'system-images;android-30;default;x86_64'
           $ANDROID_HOME/emulator/emulator -list-avds
 
       - name: Start Android Emulator
@@ -105,7 +105,7 @@ jobs:
         continue-on-error: true
         run: |
           echo "Starting emulator"
-          nohup $ANDROID_HOME/emulator/emulator -avd Pixel_3a_API_30 -no-audio -no-snapshot -no-window &
+          nohup $ANDROID_HOME/emulator/emulator -avd Pixel_3a_API_30_AOSP -no-audio -no-snapshot -no-window &
           $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
           $ANDROID_HOME/platform-tools/adb devices
           echo "Emulator started"
