--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -88,12 +88,7 @@ jobs:
           channel: canary
           profile: pixel_3a
           avd-name: Pixel_3a_API_30_AOSP
-          # Sleep for 10 seconds and retry tests to
-          # work around "System UI isn't responding" ANR
-          # (Application Not Responding) error
-          # https://github.com/ReactiveCircus/android-emulator-runner/issues/129
-          # https://github.com/upleveled/hotline-bling-codealong/pull/26#issuecomment-1094659722
-          script: yarn detox test --configuration android || (sleep 10 && yarn detox test --configuration android)
+          script: yarn detox test --configuration android
 
       # - name: Download Android Emulator Image
       #   run: |
